WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
54522
Fix platform/image-encoders/JPEGImageEncoder.cpp empty_output_buffer() behaviour
https://bugs.webkit.org/show_bug.cgi?id=54522
Summary
Fix platform/image-encoders/JPEGImageEncoder.cpp empty_output_buffer() behaviour
Alice Boxhall
Reported
2011-02-15 19:34:43 PST
The libjpeg documentation (e.g.
http://trac.imagemagick.org/browser/jpeg/trunk/libjpeg.txt
) specifies: [the empty_output_buffer method of a JPEGDestinationManager] "should write out the *entire* buffer (use the saved start address and buffer length; ignore the current state of next_output_byte and free_in_buffer)." Fix jpegEmptyOutputBuffer() by ignoring free_in_buffer value as required.
Attachments
Patch
(1.67 KB, patch)
2011-02-15 20:06 PST
,
Alice Boxhall
no flags
Details
Formatted Diff
Diff
Patch
(1.82 KB, patch)
2011-03-07 15:16 PST
,
Alice Boxhall
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alice Boxhall
Comment 1
2011-02-15 20:06:26 PST
Created
attachment 82580
[details]
Patch
Adam Barth
Comment 2
2011-02-21 12:51:55 PST
Comment on
attachment 82580
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=82580&action=review
> Source/WebCore/ChangeLog:10 > + No new tests. (OOPS!)
This line will prevent this patch from landing (because of the OOPS). Can we test this change? If not, please explain why we can't.
Alice Boxhall
Comment 3
2011-02-21 14:40:55 PST
As noted in
http://trac.webkit.org/changeset/67606
, there is no existing layout test for this file, as it's not actually used by anything yet.
Adam Barth
Comment 4
2011-02-21 15:03:43 PST
If it's not used by anything, then we should delete it, right?
Alice Boxhall
Comment 5
2011-02-21 15:08:34 PST
Ok, I'll prepare a changelist which deletes it.
Peter Kasting
Comment 6
2011-02-21 15:43:34 PST
(In reply to
comment #3
)
> As noted in
http://trac.webkit.org/changeset/67606
, there is no existing layout test for this file, as it's not actually used by anything yet.
Does "yet" mean "this is going to be used soon"? Deleting it doesn't make sense if we're about to re-add it, but if there aren't firm immediate plans, it should go away.
Alice Boxhall
Comment 7
2011-02-21 15:59:37 PST
The file has been untouched since the initial commit 5 months ago, and still nothing is using it; I think it's unlikely to be used soon.
Alice Boxhall
Comment 8
2011-02-21 16:26:58 PST
Created
https://bugs.webkit.org/show_bug.cgi?id=54915
with a patch to remove this code.
Peter Kasting
Comment 9
2011-02-21 16:51:14 PST
Closing this, then.
Ojan Vafai
Comment 10
2011-02-21 21:38:11 PST
Comment on
attachment 82580
[details]
Patch r- to remove from the review queue.
Adam Barth
Comment 11
2011-03-01 00:38:21 PST
Re-opening because we're not ready to remove this code yet.
Adam Barth
Comment 12
2011-03-01 00:43:44 PST
Comment on
attachment 82580
[details]
Patch I think this patch is fine, but I'm not sure excited about it. The problem with fixing dead code is that we can't test the change, which means we're likely to regress. We'll need to explain why we can't test this change (and remove the "no new tests" OOPS) before landing.
Alice Boxhall
Comment 13
2011-03-07 15:16:07 PST
Created
attachment 84987
[details]
Patch
Alice Boxhall
Comment 14
2011-03-07 15:20:42 PST
(In reply to
comment #12
)
> (From update of
attachment 82580
[details]
) > I think this patch is fine, but I'm not sure excited about it. The problem with fixing dead code is that we can't test the change, which means we're likely to regress.
Once this code starts to be used (see
bug 39230
), the canvas.toDataUrl() tests will test it.
> We'll need to explain why we can't test this change (and remove the "no new tests" OOPS) before landing.
Done.
WebKit Commit Bot
Comment 15
2011-03-07 18:19:38 PST
Comment on
attachment 84987
[details]
Patch Clearing flags on attachment: 84987 Committed
r80521
: <
http://trac.webkit.org/changeset/80521
>
WebKit Commit Bot
Comment 16
2011-03-07 18:19:44 PST
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 17
2011-03-07 19:16:16 PST
http://trac.webkit.org/changeset/80521
might have broken GTK Linux 32-bit Release
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug